# goldberg

./: .gitignore  CMakeLists.txt
include/: goldberg.hpp
src/: builtins.cpp  goldberg.cpp  statics.cpp
tests/: interpreter.cpp
